srcs/tester/base/vector/reserve/log.txt
./base/vector/reserve/patched.cpp:7:2: error: use of undeclared identifier 'ft'
 ft::vector<int>::size_type sz;
 ^
./base/vector/reserve/patched.cpp:9:2: error: use of undeclared identifier 'ft'
 ft::vector<int> foo;
 ^
./base/vector/reserve/patched.cpp:10:7: error: use of undeclared identifier 'foo'; did you mean 'for'?
 sz = foo.capacity();
      ^~~
      for
./base/vector/reserve/patched.cpp:10:7: error: expected expression
./base/vector/reserve/patched.cpp:13:2: error: use of undeclared identifier 'foo'
 foo.push_back(i);
 ^
./base/vector/reserve/patched.cpp:14:10: error: use of undeclared identifier 'foo'; did you mean 'for'?
 if (sz!=foo.capacity()) {
         ^~~
         for
./base/vector/reserve/patched.cpp:14:10: error: expected expression
./base/vector/reserve/patched.cpp:15:7: error: use of undeclared identifier 'foo'; did you mean 'for'?
 sz = foo.capacity();
      ^~~
      for
./base/vector/reserve/patched.cpp:15:7: error: expected expression
./base/vector/reserve/patched.cpp:20:2: error: use of undeclared identifier 'ft'
 ft::vector<int> bar;
 ^
./base/vector/reserve/patched.cpp:21:7: error: use of undeclared identifier 'bar'
 sz = bar.capacity();
      ^
./base/vector/reserve/patched.cpp:22:2: error: use of undeclared identifier 'bar'
 bar.reserve(100); // this is the only difference with foo above
 ^
./base/vector/reserve/patched.cpp:25:2: error: use of undeclared identifier 'bar'
 bar.push_back(i);
 ^
./base/vector/reserve/patched.cpp:26:10: error: use of undeclared identifier 'bar'
 if (sz!=bar.capacity()) {
         ^
./base/vector/reserve/patched.cpp:27:7: error: use of undeclared identifier 'bar'
 sz = bar.capacity();
      ^
15 errors generated.
